# eval-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISHING.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
baseline/: arithmetic.ron  language.ron  tool_use.ron
examples/: calculator.rs  minimal.rs
src/: baseline.rs  case.rs  error.rs  expect.rs  harness.rs  lib.rs  persist.rs  report.rs  report_html.rs  runner.rs  scorer.rs  upload.rs
